--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".About"></activity>
+        <activity android:name=".Practice_Area"></activity>
+        <activity android:name=".Contact_Us" />
+        <activity android:name=".DoctorSuccessStories" />
+        <activity android:name=".About" />
         <activity android:name=".RegisterAsAnalyst" />
         <activity android:name=".RegisterAsPatient" />
         <activity android:name=".RegisterAsDoctor" />
